--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "trello-power-up-skeleton",
+  "name": "agile-list",
   "version": "0.0.1",
-  "description": "A Power-Up skeleton to remix to start building your Power-Up!",
+  "description": "Agile project management, one list at a time.",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
@@ -14,7 +14,7 @@
     "node": "6.10.x"
   },
   "repository": {
-    "url": "https://glitch.com/edit/#!/trello-power-up-skeleton"
+    "url": "https://glitch.com/edit/#!/agile-list"
   },
   "license": "MIT",
   "keywords": [
